fix a few web related issues, including notifications not showing up and cloud service bugs

--- a/web/app/styles/app.scss
+++ b/web/app/styles/app.scss
@@ -1,5 +1,7 @@
-#state-notification, #save-notification {
+#state-notification, #save-notification, #request-failure-notification {
   display: none;
+  width: 70%;
+  margin: 40px auto;
 }
 
 #cloud-logged-in {
